--- a/C#.net1/DemoApp/DemoApp.Domain/DemoApp.Domain.csproj
+++ b/C#.net1/DemoApp/DemoApp.Domain/DemoApp.Domain.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+	
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="6.0.0-preview.4.21253.5" />
+	
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
   </ItemGroup>
 
